# cwinwebsocket

./: .gitignore  LICENSE.txt  README.txt  meson.build  netutil.c  netutil.h  util.c  util.h  winwebsocket.c  winwebsocket.h
lib/: base64.c  base64.h  http_parser.c  http_parser.h  sha1.c  sha1.h
